[package]
name = "s-lens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.1.0"
#crossterm = { version = "0.22", optional = true }
crossterm = "0.23.2"
chrono = "0.4"
tui = "0.18.0"
unicode-segmentation = "1.2"
unicode-width = "0.1"